2005-10-24  Alexander Larsson  <alexl@redhat.com>

	* lib/sources/gconfsource.py (GConfSource.sync_changes):
	Look for the right file when saving gconf state.

2005-10-24  Alexander Larsson  <alexl@redhat.com>

	* admin-tool/gconfviewer.py:
	* admin-tool/sabayon:
	* admin-tool/sabayon-session:
	* lib/userprofile.py:
	Find correct pygtk version if installed in a non-default place.
	
2005-10-20  Sebastien Bacher  <seb128@debian.org>

	* lib/Makefile.am: fix a typo with the sed command used 
	  to set the session name (Closes: #319314).

2005-10-11  Mark McLoughlin  <mark@skynet.ie>

	* configure.ac: post-release bump to 2.12.1

==================== 2.12.0 ====================

2005-10-11  Mark McLoughlin  <mark@skynet.ie>

	* configure.ac: Version 2.12.0.

2005-10-04  Pawan Chitrakar  <pchitrakar@gmail.com>

	* configure.ac: Added ne in ALL_LINGUASi

2005-10-02 02:57:00 EST 2005 William Lachance <wrlach@gmail.com>

	* lib/config.py.in: ignore .esd_auth.

Wed Sep 21 10:53:17 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* configure.ac lib/config.py.in lib/Makefile.am: applied patch from
	  William Lachance fixing a problem with session name on some distribs

2005-08-31  Christophe Merlet  <redfox@redfoxcenter.org>

	* configure.ac: Added "fr" to ALL_LINGUAS

2005-08-15  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: create a copy of os.envrion
	before modifying it.
	
	* sabayon.spec.in: sync some changes from downstream.

2005-08-10  Maxim Dziumanenko <mvd@mylinux.ua>

	* configure.ac: Added "uk" to ALL_LINGUAS

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: post-release bump to 2.11.91

==================== 2.11.90 ====================

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* configure.ac: Version 2.11.90.

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	* lib/sources/paneldelegate.py: add some more debug
	spew.

2005-08-01  Mark McLoughlin  <markmc@redhat.com>

	Allow ignoring changes to specific GConf keys.